--- a/src/gui/SellerList.fxml
+++ b/src/gui/SellerList.fxml
@@ -9,9 +9,9 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox prefHeight="418.0" prefWidth="554.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.DepartmentListController">
+<VBox prefHeight="418.0" prefWidth="554.0" xmlns="http://javafx.com/javafx/18" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.SellerListController">
    <children>
-      <Label alignment="TOP_LEFT" prefHeight="33.0" prefWidth="534.0" text="Department Registration">
+      <Label alignment="TOP_LEFT" prefHeight="33.0" prefWidth="534.0" text="Seller Registration">
          <font>
             <Font name="System Bold" size="14.0" />
          </font>
@@ -24,7 +24,7 @@
           <Button fx:id="btNew" mnemonicParsing="false" onAction="#onBtNewAction" text="New" />
          </items>
       </ToolBar>
-      <TableView fx:id="tableViewDepartment" prefHeight="349.0" prefWidth="554.0">
+      <TableView fx:id="tableViewSeller" prefHeight="349.0" prefWidth="554.0">
         <columns>
           <TableColumn fx:id="tableColumnId" prefWidth="75.0" text="ID" />
           <TableColumn fx:id="tableColumnName" prefWidth="75.0" text="NAME" />
